fix: adjust h3-light margin and gap in about container

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -223,7 +223,7 @@ header {
 }
 
 .h3-light {
-	margin: 39px 0 25px;
+	margin: 28px 0 25px;
 	font-family: Georgia;
 	font-size: 35px;
 	font-weight: 400;
@@ -280,7 +280,7 @@ header {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: center;
-	gap: 113px;
+	gap: 110px;
 }
 
 .about-content {
@@ -404,7 +404,7 @@ header {
 
 
 footer {
-	padding: 45px 40px;
+	padding: 50px 40px;
 	background-image: url("./assets/img/noise_transparent_2x.png"), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%);
 	background-repeat: repeat;
 	background-color: #262425;
